# screenTimeAppIOS

./: .gitignore  CLAUDE.md  Makefile  README.md  screentime.csv
backend/: .env.example  Shortcut.wflow  auth.py  backfill_instagram.py  firestore_client.py  main.py  models.py  pyproject.toml  requirements.txt  seed_dummy_data.py  seed_fake_users.py  test-notifications.http
backend/api/: index.py
backend/firestore-rules/: firestore.indexes.json  firestore.rules  storage.rules
backend/routers/: challenges.py  credits.py  daily_challenges.py  groups.py  notifications.py  shortcuts.py  social.py  usage.py  users.py
backend/scripts/: generate_block_shortcuts.py  generate_shortcuts.py  set_credits.py
backend/services/: block_shortcut_service.py  challenge_service.py  daily_challenge_service.py  session_service.py  shortcut_generator_service.py  summary_service.py
backend/services/notification/: __init__.py  active_session_repository.py  audit_repository.py  models.py  push_token_repository.py  rules_engine.py  sender.py  service.py  settings_repository.py  shame_repository.py  template_builder.py
backend/shortcuts/: Close Insta.shortcut  Instagram Close Tracker.shortcut  Instagram Open Tracker.shortcut  Instagram-open.shortcut  Open Insta .shortcut
backend/shortcuts/new_shortcuts/: Discord-close.shortcut  Discord-open.shortcut  Facebook-close.shortcut  Facebook-launcher.shortcut  Facebook-open.shortcut  Instagram-close.shortcut  Instagram-launcher.shortcut  Instagram-open.shortcut  LinkedIn-close.shortcut  LinkedIn-launcher.shortcut  LinkedIn-open.shortcut  (+20 more)
(+73 files in other folders)
